force-app/main/default/objects/CC_TrazaInt__c/CC_TrazaInt__c.object-meta.xml
<CustomObject>
    <description>Trazas de integraciones</description>
    <label>Traza Integraciones</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Interfaz</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trazas Integraciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>