force-app/main/default/objects/CC_TrazaInt__c/fields/CBK_Body__c.field-meta.xml
<CustomField>
    <fullName>CBK_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>