force-app/main/default/objects/CC_TrazaInt__c/fields/CBK_Datos_Envio__c.field-meta.xml
<CustomField>
    <fullName>CBK_Datos_Envio__c</fullName>
    <description>Datos de envio</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos Envio Header</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>