force-app/main/default/objects/CC_TrazaInt__c/fields/CBK_Datos_Respuesta__c.field-meta.xml
<CustomField>
    <fullName>CBK_Datos_Respuesta__c</fullName>
    <description>Datos de respuesta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos Respuesta Header</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>