force-app/main/default/objects/CC_TrazaInt__c/fields/CC_DetalleError__c.field-meta.xml
<CustomField>
    <fullName>CC_DetalleError__c</fullName>
    <description>Detalle error producido</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detalle error producido</inlineHelpText>
    <label>Detalle error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>