force-app/main/default/objects/CC_TrazaInt__c/fields/CC_EstadoInt__c.field-meta.xml
<CustomField>
    <fullName>CC_EstadoInt__c</fullName>
    <description>Estado de la integración</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Estado de la integración</inlineHelpText>
    <label>Estado integración</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>