force-app/main/default/objects/CC_TrazaInt__c/fields/CC_FechaFin__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaFin__c</fullName>
    <description>Fecha de finalización de la integración</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha de finalización de la integración</inlineHelpText>
    <label>Fecha Fin</label>
    <type>DateTime</type>
</CustomField>