force-app/main/default/objects/CC_TrazaInt__c/fields/CC_FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaInicio__c</fullName>
    <description>Fecha inicio de la integración</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha inicio de la integración</inlineHelpText>
    <label>Fecha Inicio</label>
    <type>DateTime</type>
</CustomField>