force-app/main/default/objects/CC_TrazaInt__c/fields/CC_FinOK__c.field-meta.xml
<CustomField>
    <fullName>CC_FinOK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de finalización correcta de la integración</description>
    <inlineHelpText>Indicador de finalización correcta de la integración</inlineHelpText>
    <label>Finalizado OK</label>
    <type>Checkbox</type>
</CustomField>