force-app/main/default/objects/CC_TrazaInt__c/fields/CC_Identificador__c.field-meta.xml
<CustomField>
    <fullName>CC_Identificador__c</fullName>
    <description>Identificador asociado</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Identificador asociado</inlineHelpText>
    <label>Identificador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>