force-app/main/default/objects/CC_TrazaInt__c/fields/CC_IdOrigen__c.field-meta.xml
<CustomField>
    <fullName>CC_IdOrigen__c</fullName>
    <description>Identificador origen de la traza</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Identificador origen de la traza</inlineHelpText>
    <label>ID Origen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>