force-app/main/default/objects/CC_TrazaInt__c/fields/CC_MensajeEntrada__c.field-meta.xml
<CustomField>
    <fullName>CC_MensajeEntrada__c</fullName>
    <description>Mensaje de entrada</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mensaje de entrada</inlineHelpText>
    <label>Entrada</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>