force-app/main/default/objects/CC_TrazaInt__c/fields/CC_MensajeSalida__c.field-meta.xml
<CustomField>
    <fullName>CC_MensajeSalida__c</fullName>
    <description>Mensaje de salida de la integración</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mensaje de salida de la integración</inlineHelpText>
    <label>Salida</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>