force-app/main/default/objects/CC_TrazaInt__c/fields/CC_TipoError__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoError__c</fullName>
    <description>Tipo error producido</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tipo error producido</inlineHelpText>
    <label>Tipo error</label>
    <length>50</length>
    <type>Text</type>
</CustomField>