force-app/main/default/objects/CC_TrazaInt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Identificador__c</columns>
    <columns>CC_MensajeEntrada__c</columns>
    <columns>CC_MensajeSalida__c</columns>
    <columns>CC_FechaInicio__c</columns>
    <columns>CC_FinOK__c</columns>
    <columns>CC_FechaFin__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>