force-app/main/default/objects/CC_TrazaInt__c/listViews/Now_In_Sales_CSBD_WS_AltaOportunidad.listView-meta.xml
<ListView>
    <fullName>Now_In_Sales_CSBD_WS_AltaOportunidad</fullName>
    <columns>NAME</columns>
    <columns>CC_EstadoInt__c</columns>
    <columns>CC_Identificador__c</columns>
    <columns>CC_MensajeEntrada__c</columns>
    <columns>CC_MensajeSalida__c</columns>
    <columns>CC_FechaInicio__c</columns>
    <columns>CC_FechaFin__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CC_DetalleError__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>CSBD_WS_Adobe</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>CSBD - CSBD_WS_AltaOportunidad</label>
    <sharedTo>
        <group>CSBD_General</group>
    </sharedTo>
</ListView>